[gd_scene load_steps=17 format=2]

[ext_resource path="res://KinematicBody.gd" type="Script" id=1]
[ext_resource path="res://Area.gd" type="Script" id=2]
[ext_resource path="res://Area2.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.768627, 0.207843, 0.235294, 1 )
metallic_specular = 0.0

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 100, 2, 100 )

[sub_resource type="OpenSimplexNoise" id=7]

[sub_resource type="NoiseTexture" id=8]
flags = 4
seamless = true
as_normalmap = true
noise = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.341176, 0.745098, 0.133333, 1 )
albedo_texture = SubResource( 8 )
metallic_specular = 0.0

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -50, 1, 50, 50, 1, 50, -50, -1, 50, 50, 1, 50, 50, -1, 50, -50, -1, 50, 50, 1, -50, -50, 1, -50, 50, -1, -50, -50, 1, -50, -50, -1, -50, 50, -1, -50, 50, 1, 50, 50, 1, -50, 50, -1, 50, 50, 1, -50, 50, -1, -50, 50, -1, 50, -50, 1, -50, -50, 1, 50, -50, -1, -50, -50, 1, 50, -50, -1, 50, -50, -1, -50, 50, 1, 50, -50, 1, 50, 50, 1, -50, -50, 1, 50, -50, 1, -50, 50, 1, -50, -50, -1, 50, 50, -1, 50, -50, -1, -50, 50, -1, 50, 50, -1, -50, -50, -1, -50 )

[sub_resource type="SphereShape" id=11]

[sub_resource type="QuadMesh" id=12]

[sub_resource type="SpatialMaterial" id=13]

[sub_resource type="CylinderMesh" id=14]

[sub_resource type="CapsuleShape" id=15]
radius = 1.39483
height = 0.002

[node name="Spatial" type="Spatial"]

[node name="KinematicBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 0.342021, 0.939692, 0, -0.939692, 0.342021, 0, 12, 4.9 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, -0.258819, -7.71341e-009, -0.166366, -0.620885, 0.766044, -0.198267, -0.739942, -0.642788, 0, 16, 0 )
light_energy = 0.5
shadow_enabled = true

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.6 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 11 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 0.3, -0.0999994 )
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -15.0
margin_right = 63.0
margin_bottom = 16.0
text = "2+2*2 = ?
"
align = 1
valign = 1

[node name="Area2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.8, 0, 0 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area2"]
mesh = SubResource( 14 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, -0.4 )
shape = SubResource( 15 )

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 425.718
margin_top = 415.221
margin_right = 582.718
margin_bottom = 514.221

[node name="Button" type="Button" parent="TextEdit"]
margin_left = 5.0
margin_top = 69.0
margin_right = 151.0
margin_bottom = 92.0
text = "Input"

[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2" to="Area2" method="_on_Area2_body_entered"]
[connection signal="body_exited" from="Area2" to="Area2" method="_on_Area2_body_exited"]
[connection signal="pressed" from="TextEdit/Button" to="Area2" method="_on_Button_pressed"]
